# Helix

./: .dockerignore  .gitignore  Dockerfile  NVIDIA_RESOURCES.md  QUICK_START.md  README.md  SETUP.md  agentos_app.py  demo_complete_workflow.py  docker-compose.yml  hello_world.py  pyproject.toml  requirements.txt  test_agentos_api.py  test_file_creation.py  test_nim_api.py  test_vscode_integration.py
.github/workflows/: auto-commit.yml  main.yml
agent-ui/: package-lock.json
backend/: .env.example  DYNAMIC_ANALYSIS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  ORCHESTRATOR_GUIDE.md  PHASE_25_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  index_workspace.py  requirements.txt  run_server.py  start.py  test_analyzer.py  test_embedder.py  test_features.py  travel_agent.py
backend/tests/: test_integration.py  test_tools.py
examples/: demo_agno_nim.py
helix/: __init__.py  __main__.py  agents.py.backup  agno_agents.py  ai_detector.py  cli.py  config.py  gitops.py  providers.py  utils.py  workflow.py
helix-vscode/: .vscodeignore  LICENSE  helix-ai-1.0.0.vsix  helix-ai-standalone-2.0.0.vsix  package-lock.json  package-old.json  package-standalone.json  package.json
helix-vscode/media/: chat.html
helix-vscode/src/: extension-standalone.ts  extension.ts
helix/tests/: __init__.py  test_ai_detector.py  test_gitops.py  test_providers.py
scripts/: build_vscode_extension.bat  explain_run.sh  run_local.sh
vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
workspace/: add_numbers.py  main.py  test.py
(+20 files in other folders)
