
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helix"
version = "1.0.0"
description = "Helix - Multi-agent coding assistant with Agno"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Helix Team"}
]
keywords = ["ai", "agents", "coding-assistant", "llm", "nvidia-nim"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "requests>=2.31.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0",
    "bandit>=1.7.5",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
helix = "helix.cli:main"

[tool.setuptools]
packages = ["helix", "helix.tests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["helix/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=helix --cov-report=term-missing"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 120